syntax = "proto3";

// Entry is the file format used for entries when Harpocrates is encrypting
// with Secretbox-format keys.
message Entry {
  // The content, encrypted with the EK via Secretbox, using the given nonce.
  bytes encrypted_content = 1;
  // The nonce used to encrypt the content.
  bytes nonce = 2;
}
