syntax = "proto3";

// Key represents an encrypted key that can be used to secure a Harpocrates vault.
message Key {
  oneof key {
    PGPKey pgp_key = 1;
    HarpKey harp_key = 2;
  }
}

// PGPKey represents a PGP key.
message PGPKey {
  // Serialized, encrypted PGP entity to use for encryption.
  bytes serialized_entity = 1;
}

// HarpKey represents a harpocrates-native key.
message HarpKey {
  // Encryption key (EK), encrypted by the KEK via AES-ECB mode.
  bytes encrypted_key = 1;

  // Key-encryption key (KEK) derivation parameters.
  // The KEK is always an AES-256 key (32 bytes wide), derived via scrypt using the given parameters.
  bytes salt = 2;
  int32 n = 3;
  int32 r = 4;
  int32 p = 5;

  // Allows checking whether a given KEK is accurate in constant time, and without any encrypted data.
  bytes kek_sha256 = 6;
}
